// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Relay.QL tag valid if classic mode enabled 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 20,
        "line": 2,
        "path": "/tmp/gql-test/4b84265c74781e89237122dd0d134f58aaec5a6e/query/test.js",
      },
    ],
    "message": "Unknown type \\"xUser\\". Did you mean \\"User\\"? (KnownTypeNames)",
    "severity": "error",
  },
]
`;

exports[`graphql tag is valid 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 20,
        "line": 2,
        "path": "/tmp/gql-test/5dd90217ecec8865f26f7e0df6ba8acc779f5524/query/test.js",
      },
    ],
    "message": "Unknown type \\"xUser\\". Did you mean \\"User\\"? (KnownTypeNames)",
    "severity": "error",
  },
]
`;

exports[`graphql.experimental tag is valid 1`] = `
Array [
  Object {
    "locations": Array [
      Object {
        "column": 20,
        "line": 4,
        "path": "/tmp/gql-test/f00e69aae0918f377a11128da1dcb1b945a2efc9/query/test.js",
      },
    ],
    "message": "Unknown type \\"xUser\\". Did you mean \\"User\\"? (KnownTypeNames)",
    "severity": "error",
  },
]
`;
